Fixed view all images contrast & disabled next button has styling now

--- a/public/css/_request.scss
+++ b/public/css/_request.scss
@@ -82,6 +82,10 @@ body#request {
           font-size: 14px;
           font-family: "Roboto Mono", monospace;
         }
+        &#next-btn.disabled {
+          opacity: 0.5;
+          cursor: not-allowed;
+        }
       }
     }
   }
